# StatBlocker

./: .gitignore  README.md  pyproject.toml
statblocker/: __main__.py  create_venv.bat  main.py  requirements.txt
statblocker/controller/: main_controller.py
statblocker/data/: ability_scores.py  action.py  bases.py  challenge_rating.py  constants.py  damage.py  dice.py  encounter.py  enums.py  languages.py  macros.py  monster_OLD.py  senses.py  skills.py  speed.py  stat_block.py  trait.py
statblocker/data/db/: __init__.py  mm_2024_stats.csv  monster_manual_2024_database.py
statblocker/scripts/: build_exe.py
statblocker/view/: main_view.py  make_all_views.bat
statblocker/view/qt_designer/: main_view.ui
statblocker/view/qt_generated_code/: main_view.py
statblocker/widgets/: checkable_combobox.py
