[project]
name = "statblocker"
version = "1.0.0"
description = "A PyQt5 application to generate D&D 5E (2024) monster stat blocks."
authors = [{ name = "Jonathan Bailey" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "PyQt5==5.15.11",
    "jsonpickle==4.1.1",
    "pandas==2.3.1",
    "pyinstaller==6.14.2",
]

[project.optional-dependencies]
dev = [
    "PyQt5Designer==5.14.1"
]

[project.scripts]
statblocker = "statblocker:main"